--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "http": "^0.0.1-security",
     "tmi.js": "^1.9.0-pre.1",
     "twurple": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
