--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "bottwitch",
+  "name": "lytchi-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js --ignore points.json"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "twitch",
+    "points"
+  ],
+  "author": "Tryllogy",
   "license": "ISC",
   "type": "module",
   "dependencies": {
