--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "dependencies": {
     "@twurple/auth": "^7.1.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "tmi.js": "^1.9.0-pre.1",
     "twurple": "^1.0.0"
