🌱 📝 ✨ Gros Commit pour faire une version utilisable du bot sans risquer la parte des données des viewers ou des gains de raffle offline. RELIRE LE README

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,12 @@
 /.vscode
 
 .env
+.env.production
+.env.development
+.env.test
+
 package-lock.json
+
 points.json
+points.dev.json
+points.test.json
