--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "node index.js",
-    "dev": "nodemon index.js --ignore points.json"
+    "test": "cross-env NODE_ENV=test CONFIG_PATH=.env.test jest",
+    "start": "cross-env NODE_ENV=production CONFIG_PATH=.env.production node -r dotenv/config index.js",
+    "dev": "cross-env NODE_ENV=development CONFIG_PATH=.env.development nodemon -r dotenv/config index.js --ignore points.json"
   },
   "keywords": [
     "twitch",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@twurple/auth": "^7.1.0",
     "axios": "^1.7.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "tmi.js": "^1.9.0-pre.1",
     "twurple": "^1.0.0"
