--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test CONFIG_PATH=.env.test jest",
     "start": "cross-env NODE_ENV=production CONFIG_PATH=.env.production node -r dotenv/config index.js",
-    "dev": "cross-env NODE_ENV=development CONFIG_PATH=.env.development nodemon -r dotenv/config index.js --ignore points.dev.json"
+    "dev": "cross-env NODE_ENV=development CONFIG_PATH=.env.development nodemon -r dotenv/config index.js --ignore points.dev.json",
+    "coverage": "npx jest --coverage"
   },
   "keywords": [
     "twitch",
