--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "lytchi-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "cross-env NODE_ENV=test CONFIG_PATH=.env.test jest",
-    "start": "cross-env NODE_ENV=production CONFIG_PATH=.env.production node -r dotenv/config index.js",
-    "dev": "cross-env NODE_ENV=development CONFIG_PATH=.env.development nodemon -r dotenv/config index.js --ignore points.dev.json",
+    "start": "cross-env NODE_ENV=production CONFIG_PATH=.env.production tsx ./src/index.ts",
+    "dev": "cross-env NODE_ENV=development CONFIG_PATH=.env.development nodemon",
     "coverage": "npx jest --coverage"
   },
   "keywords": [
@@ -27,9 +27,13 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.25.2",
+    "@types/jest": "^29.5.12",
+    "@types/tmi.js": "^1.8.6",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "ts-jest": "^29.2.3"
+    "ts-jest": "^29.2.4",
+    "tsx": "^4.16.5",
+    "typescript": "^5.5.4"
   }
 }
