--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.7.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "lockfile": "^1.0.4",
+    "proper-lockfile": "^4.1.2",
     "tmi.js": "^1.9.0-pre.1",
     "twurple": "^1.0.0"
   },
@@ -28,6 +30,7 @@
     "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/proper-lockfile": "^4.1.4",
     "@types/tmi.js": "^1.8.6",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
